# django-blog

./: pyproject.toml
myblog/account/: admin.py  forms.py  models.py  other_viewviews.py  urls.py  views.py
myblog/account/api/: serializers.py  urls.py  views.py
myblog/blog/: forms.py  models.py  urls.py  utils.py  views.py
myblog/blog/api/: serializers.py  urls.py  views.py
myblog/media_cdn/blog/1/: Post_ketiga_gue_kayaknya-download.jfif
myblog/media_cdn/blog/9/: coba_dari_api-images.jfif
myblog/myblog/: settings.py  urls.py
myblog/review/: models.py  urls.py  views.py
myblog/templates/account/: account1.html  login.html  login1.html  must_authenticate.html  register.html  register1.html
myblog/templates/blog/: create_blog.html  detail.html  edit_blog.html  home_blog.html  index.html
myblog/templates/layout/: base_template.html  footer.html  sidebar.html  topbar.html
myblog/templates/review/: index.html
