[tool.poetry]
name = "more-django"
version = "0.1.0"
description = "coba django lagi"
authors = ["prananda.widiastara <prananda.widiastara@prosa.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
requests = "^2.27.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
